# learnNdk

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sivin/learnndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniMemoryUtil.cpp  MemoryUtil.cpp  MemoryUtil.h  common.h  jni_register.c  jni_register.h  less01.c  less01.cpp  lesson01.c  lesson02.c  lesson03.c  lesson04.c  lesson05.c  lesson06.c  lesson07.c  stllearn.cpp  stllearn.h
app/src/main/doc/: 01-JNI对象成员属性获取与回设.md  03-JNI数组的处理.md
app/src/main/java/com/sivin/learnndk/: DefaultItemDecoration.java  MainActivity.java
app/src/main/java/com/sivin/learnndk/bean/: Course.java  Student.java
app/src/main/java/com/sivin/learnndk/less01/: Less01Operation.java  NativeApi.java  Person.java
app/src/main/java/com/sivin/learnndk/lesson01/: Less01Operation.java  Lesson01Operator.java  NativeApi.java
app/src/main/java/com/sivin/learnndk/lesson02/: Lesson02Operator.java  LessonOpertor02.java  NativeApi.java  NativeApi02.java
app/src/main/java/com/sivin/learnndk/lesson03/: Lesson03Operator.java  NativeApi03.java
app/src/main/java/com/sivin/learnndk/lesson04/: Lesson04Operator.java  NativeApi04.java
app/src/main/java/com/sivin/learnndk/lesson05/: Lesson05Operator.java  NativeApi05.java
app/src/main/res/layout/: activity_main.xml  item_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sivin/learnndk/: ExampleUnitTest.java
doc/: JNI动态注册流程.md
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
